# krylo

./: .batchtest.mjs  .batchtest2.mjs  .batchtest3.mjs  .batchtest4.mjs  .batchtest5.mjs  .batchtest6.mjs  .env.example  .env.local  .gitignore  CLAUDE copy.md  CLAUDE.md  CLAUDE.md.bak  CLAUDE.md.bak2.md  KNOWN_LIMITATIONS.md  README.md  campaign-preview.html.bak-wo296-1775228629  deploy-vps.sh  deploy.sh  eslint.config.js  glitch-audit-wo295-webgl.md  index.html  krylo-feed.html  mock-server.cjs  new_claude.md  package-lock.json  package.json  playwright.config.js  project_wo1033_advantage_spec.md  qa_crediff_divergencesurface.mjs  qa_divergencesurface.mjs  qa_epistemic_spine.mjs  qa_epistemictier.mjs  qa_kryl1097_convergence_fingerprint.mjs  qa_kryl1097_replay.mjs  qa_kryl1097_wiring.mjs  qa_kryl1105_ibengine_invariants.mjs  qa_kryl1112_archetype_boundary.mjs  qa_kryl1113_counter_evidence.mjs  qa_phase_b_validation.mjs  qa_realitycomparator.mjs  (+41 more)
Archive/: index.html  (+3 more)
codec/: Cargo.toml  ci-gate.sh
codec/src/: constants.rs  decode.rs  encode.rs  errors.rs  lib.rs  types.rs
krylo-kernel/: Cargo.toml
krylo-kernel/adapters/forensic_panel/: Cargo.toml
krylo-kernel/adapters/ingest/: Cargo.toml
krylo-kernel/adapters/session_lock/: Cargo.toml
krylo-kernel/adapters/webgl_tx/: Cargo.toml
krylo-kernel/core/bus/: Cargo.toml
krylo-kernel/core/scl/: Cargo.toml
krylo-kernel/engine/fsm/: Cargo.toml
krylo-kernel/engine/math/: Cargo.toml
krylo-kernel/engine/precursor/: Cargo.toml
krylo-kernel/engine/temporal/: Cargo.toml
krylo-kernel/engine/watchdog/: Cargo.toml
(+841 files in other folders)
