[package]
name = "krylo-codec"
version = "1.0.0"
edition = "2021"
description = "KRYLO signal boundary codec — ABI v1.0 reference implementation (WO-1082-B)"

[lib]
name = "krylo_codec"
path = "src/lib.rs"

[[bin]]
name = "parity"
path = "src/bin/parity.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[dev-dependencies]
